remove and clear unused code

--- a/src/main/resources/com/tfg/dashboard_tfg/view/DashboardView.fxml
+++ b/src/main/resources/com/tfg/dashboard_tfg/view/DashboardView.fxml
@@ -128,7 +128,7 @@
                           GridPane.columnIndex="0"
                           GridPane.rowIndex="1"
                           title="Server Status"
-                          description="Media Server Health"
+                          description="System Health"
                           text=""
                           textSize="BIGGER"
                           animated="true"
